tests/tooling/fixtures/native/recovery/negative/negative_message_parser_direct_nil_missing_selector.objc3
// Negative fixture: direct nil receiver message-send missing selector identifier.
// Expected diagnostic code(s): O3P113.
module NegativeMessageParserDirectNilMissingSelector;

fn main() {
  return [nil : 1];
}
